--- a/Meet[9-10-19]/src/components/ficha/ficha.css
+++ b/Meet[9-10-19]/src/components/ficha/ficha.css
@@ -1,5 +1,9 @@
 .ficha{
-    background-color: #000000;
-    height: 15px;
-    width: 15px;
+    margin: 10px 0;
+}
+.ficha button{
+    background-color: #222222;
+    color: #fff;
+    height: 60px;
+    width: 60px;
 }
