--- a/Meet[9-10-19]/src/containers/fichero/fichero.css
+++ b/Meet[9-10-19]/src/containers/fichero/fichero.css
@@ -1,3 +1,7 @@
 .fichero-container{
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
 }
